Latte/antlr-generated/grammar/LatteParser.java
// $ANTLR 3.4 D:\\Projects\\git\\Latte\\Latte\\src\\grammar\\Latte.g 2011-11-14 21:15:10

  package grammar;
  import java.util.Map;
  import java.util.HashMap;
  import java.util.List;
  import java.util.ArrayList;
  import grammar.Param;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

import org.antlr.runtime.tree.*;


@SuppressWarnings({"all", "warnings", "unchecked"})
public class LatteParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "ARG", "ARRAY", "BEGIN", "BLOCK", "BOOLEAN", "CALL", "COMMENT", "COMPLEX", "DEFINE", "DEFINE_ARRAY", "DEFINE_SINGLE", "DIV", "DO", "ELSE", "END", "ENDFOR", "ENDIF", "ENDWHILE", "ERROR", "EXPR", "FOR", "FUNC", "IF", "INTEGER", "MINUS", "MOD", "MULTILINE_COMMENT", "NAME", "NEGATION", "PARAM", "PARAMS", "PLUS", "PRINTINT", "PROGRAM", "READINT", "REF", "RETURN", "SINGLE_TYPE", "STRING", "THEN", "TIMES", "WHILE", "WS", "'!'", "'!='", "'&&'", "'('", "')'", "'++'", "','", "'--'", "';'", "'<'", "'<='", "'='", "'=='", "'>'", "'>='", "'['", "']'", "'boolean[]'", "'else'", "'error'", "'if'", "'int[]'", "'printInt'", "'readInt'", "'return'", "'while'", "'{'", "'||'", "'}'"
    };

    public static final int EOF=-1;
    public static final int T__47=47;
    public static final int T__48=48;
    public static final int T__49=49;
    public static final int T__50=50;
    public static final int T__51=51;
    public static final int T__52=52;
    public static final int T__53=53;
    public static final int T__54=54;
    public static final int T__55=55;
    public static final int T__56=56;
    public static final int T__57=57;
    public static final int T__58=58;
    public static final int T__59=59;
    public static final int T__60=60;
    public static final int T__61=61;
    public static final int T__62=62;
    public static final int T__63=63;
    public static final int T__64=64;
    public static final int T__65=65;
    public static final int T__66=66;
    public static final int T__67=67;
    public static final int T__68=68;
    public static final int T__69=69;
    public static final int T__70=70;
    public static final int T__71=71;
    public static final int T__72=72;
    public static final int T__73=73;
    public static final int T__74=74;
    public static final int T__75=75;
    public static final int ARG=4;
    public static final int ARRAY=5;
    public static final int BEGIN=6;
    public static final int BLOCK=7;
    public static final int BOOLEAN=8;
    public static final int CALL=9;
    public static final int COMMENT=10;
    public static final int COMPLEX=11;
    public static final int DEFINE=12;
    public static final int DEFINE_ARRAY=13;
    public static final int DEFINE_SINGLE=14;
    public static final int DIV=15;
    public static final int DO=16;
    public static final int ELSE=17;
    public static final int END=18;
    public static final int ENDFOR=19;
    public static final int ENDIF=20;
    public static final int ENDWHILE=21;
    public static final int ERROR=22;
    public static final int EXPR=23;
    public static final int FOR=24;
    public static final int FUNC=25;
    public static final int IF=26;
    public static final int INTEGER=27;
    public static final int MINUS=28;
    public static final int MOD=29;
    public static final int MULTILINE_COMMENT=30;
    public static final int NAME=31;
    public static final int NEGATION=32;
    public static final int PARAM=33;
    public static final int PARAMS=34;
    public static final int PLUS=35;
    public static final int PRINTINT=36;
    public static final int PROGRAM=37;
    public static final int READINT=38;
    public static final int REF=39;
    public static final int RETURN=40;
    public static final int SINGLE_TYPE=41;
    public static final int STRING=42;
    public static final int THEN=43;
    public static final int TIMES=44;
    public static final int WHILE=45;
    public static final int WS=46;

    // delegates
    public Parser[] getDelegates() {
        return new Parser[] {};
    }

    // delegators


    public LatteParser(TokenStream input) {
        this(input, new RecognizerSharedState());
    }
    public LatteParser(TokenStream input, RecognizerSharedState state) {
        super(input, state);
    }

protected TreeAdaptor adaptor = new CommonTreeAdaptor();

public void setTreeAdaptor(TreeAdaptor adaptor) {
    this.adaptor = adaptor;
}
public TreeAdaptor getTreeAdaptor() {
    return adaptor;
}
    public String[] getTokenNames() { return LatteParser.tokenNames; }
    public String getGrammarFileName() { return "D:\\Projects\\git\\Latte\\Latte\\src\\grammar\\Latte.g"; }


      Map<String, CommonTree> functionDefinitions = new HashMap<String, CommonTree>();
      Map<String, List<Param> > functionParameters = new HashMap<String, List<Param>>();


    public static class program_return extends ParserRuleReturnScope {
        LatteTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "program"
    // D:\\Projects\\git\\Latte\\Latte\\src\\grammar\\Latte.g:60:1: program : function_definitions_list -> ^( PROGRAM function_definitions_list ) ;
    public final LatteParser.program_return program() throws RecognitionException {
        LatteParser.program_return retval = new LatteParser.program_return();
        retval.start = input.LT(1);


        LatteTree root_0 = null;

        LatteParser.function_definitions_list_return function_definitions_list1 =null;


        RewriteRuleSubtreeStream stream_function_definitions_list=new RewriteRuleSubtreeStream(adaptor,"rule function_definitions_list");
        try {
            // D:\\Projects\\git\\Latte\\Latte\\src\\grammar\\Latte.g:61:2: ( function_definitions_list -> ^( PROGRAM function_definitions_list ) )
            // D:\\Projects\\git\\Latte\\Latte\\src\\grammar\\Latte.g:61:4: function_definitions_list
            {
            pushFollow(FOLLOW_function_definitions_list_in_program216);
            function_definitions_list1=function_definitions_list();

            state._fsp--;

            stream_function_definitions_list.add(function_definitions_list1.getTree());

            // AST REWRITE
            // elements: function_definitions_list
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (LatteTree)adaptor.nil();
            // 61:30: -> ^( PROGRAM function_definitions_list )
            {
                // D:\\Projects\\git\\Latte\\Latte\\src\\grammar\\Latte.g:61:33: ^( PROGRAM function_definitions_list )
                {
                LatteTree root_1 = (LatteTree)adaptor.nil();
                root_1 = (LatteTree)adaptor.becomeRoot(
                (LatteTree)adaptor.create(PROGRAM, "PROGRAM")
                , root_1);

                adaptor.addChild(root_1, stream_function_definitions_list.nextTree());

                adaptor.addChild(root_0, root_1);
                }

            }


            retval.tree = root_0;

            }

            retval.stop = input.LT(-1);


            retval.tree = (LatteTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (LatteTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "program"


    public static class function_definitions_list_return extends ParserRuleReturnScope {
        LatteTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "function_definitions_list"
    // D:\\Projects\\git\\Latte\\Latte\\src\\grammar\\Latte.g:64:1: function_definitions_list : ( function_definition )+ ;
    public final LatteParser.function_definitions_list_return function_definitions_list() throws RecognitionException {
        LatteParser.function_definitions_list_return retval = new LatteParser.function_definitions_list_return();
        retval.start = input.LT(1);


        LatteTree root_0 = null;

        LatteParser.function_definition_return function_definition2 =null;



        try {
            // D:\\Projects\\git\\Latte\\Latte\\src\\grammar\\Latte.g:65:2: ( ( function_definition )+ )
            // D:\\Projects\\git\\Latte\\Latte\\src\\grammar\\Latte.g:65:4: ( function_definition )+
            {
            root_0 = (LatteTree)adaptor.nil();


            // D:\\Projects\\git\\Latte\\Latte\\src\\grammar\\Latte.g:65:4: ( function_definition )+
            int cnt1=0;
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==SINGLE_TYPE||LA1_0==64||LA1_0==68) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // D:\\Projects\\git\\Latte\\Latte\\src\\grammar\\Latte.g:65:4: function_definition
            	    {
            	    pushFollow(FOLLOW_function_definition_in_function_definitions_list235);
            	    function_definition2=function_definition();

            	    state._fsp--;

            	    adaptor.addChild(root_0, function_definition2.getTree());

            	    }
            	    break;

            	default :
            	    if ( cnt1 >= 1 ) break loop1;
                        EarlyExitException eee =
                            new EarlyExitException(1, input);
                        throw eee;
                }
                cnt1++;
            } while (true);


            }

            retval.stop = input.LT(-1);


            retval.tree = (LatteTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (LatteTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "function_definitions_list"


    public static class function_definition_return extends ParserRuleReturnScope {
        LatteTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "function_definition"
    // D:\\Projects\\git\\Latte\\Latte\\src\\grammar\\Latte.g:68:1: function_definition : type fname= NAME '(' (arg= arguments_list )? ')' stmt= block -> ^( FUNC NAME type ( arguments_list )? block ) ;
    public final LatteParser.function_definition_return function_definition() throws RecognitionException {
        LatteParser.function_definition_return retval = new LatteParser.function_definition_return();
        retval.start = input.LT(1);


        LatteTree root_0 = null;

        Token fname=null;
        Token char_literal4=null;
        Token char_literal5=null;
        LatteParser.arguments_list_return arg =null;

        LatteParser.block_return stmt =null;

        LatteParser.type_return type3 =null;


        LatteTree fname_tree=null;
        LatteTree char_literal4_tree=null;
        LatteTree char_literal5_tree=null;
        RewriteRuleTokenStream stream_NAME=new RewriteRuleTokenStream(adaptor,"token NAME");
        RewriteRuleTokenStream stream_51=new RewriteRuleTokenStream(adaptor,"token 51");
        RewriteRuleTokenStream stream_50=new RewriteRuleTokenStream(adaptor,"token 50");
        RewriteRuleSubtreeStream stream_arguments_list=new RewriteRuleSubtreeStream(adaptor,"rule arguments_list");
        RewriteRuleSubtreeStream stream_block=new RewriteRuleSubtreeStream(adaptor,"rule block");
        RewriteRuleSubtreeStream stream_type=new RewriteRuleSubtreeStream(adaptor,"rule type");
        try {
            // D:\\Projects\\git\\Latte\\Latte\\src\\grammar\\Latte.g:69:3: ( type fname= NAME '(' (arg= arguments_list )? ')' stmt= block -> ^( FUNC NAME type ( arguments_list )? block ) )
            // D:\\Projects\\git\\Latte\\Latte\\src\\grammar\\Latte.g:69:4: type fname= NAME '(' (arg= arguments_list )? ')' stmt= block
            {
            pushFollow(FOLLOW_type_in_function_definition248);
            type3=type();

            state._fsp--;

            stream_type.add(type3.getTree());

            fname=(Token)match(input,NAME,FOLLOW_NAME_in_function_definition252);  
            stream_NAME.add(fname);


            char_literal4=(Token)match(input,50,FOLLOW_50_in_function_definition254);  
            stream_50.add(char_literal4);


            // D:\\Projects\\git\\Latte\\Latte\\src\\grammar\\Latte.g:69:27: (arg= arguments_list )?
            int alt2=2;
            int LA2_0 = input.LA(1);

            if ( (LA2_0==SINGLE_TYPE||LA2_0==64||LA2_0==68) ) {
                alt2=1;
            }
            switch (alt2) {
                case 1 :
                    // D:\\Projects\\git\\Latte\\Latte\\src\\grammar\\Latte.g:69:27: arg= arguments_list
                    {
                    pushFollow(FOLLOW_arguments_list_in_function_definition258);
                    arg=arguments_list();

                    state._fsp--;

                    stream_arguments_list.add(arg.getTree());

                    }
                    break;

            }


            char_literal5=(Token)match(input,51,FOLLOW_51_in_function_definition261);  
            stream_51.add(char_literal5);


            pushFollow(FOLLOW_block_in_function_definition265);
            stmt=block();

            state._fsp--;

            stream_block.add(stmt.getTree());

            // AST REWRITE
            // elements: arguments_list, block, NAME, type
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (LatteTree)adaptor.nil();
            // 69:59: -> ^( FUNC NAME type ( arguments_list )? block )
            {
                // D:\\Projects\\git\\Latte\\Latte\\src\\grammar\\Latte.g:69:62: ^( FUNC NAME type ( arguments_list )? block )
                {
                LatteTree root_1 = (LatteTree)adaptor.nil();
                root_1 = (LatteTree)adaptor.becomeRoot(
                (LatteTree)adaptor.create(FUNC, "FUNC")
                , root_1);

                adaptor.addChild(root_1, 
                stream_NAME.nextNode()
                );

                adaptor.addChild(root_1, stream_type.nextTree());

                // D:\\Projects\\git\\Latte\\Latte\\src\\grammar\\Latte.g:69:79: ( arguments_list )?
                if ( stream_arguments_list.hasNext() ) {
                    adaptor.addChild(root_1, stream_arguments_list.nextTree());

                }
                stream_arguments_list.reset();

                adaptor.addChild(root_1, stream_block.nextTree());

                adaptor.addChild(root_0, root_1);
                }

            }


            retval.tree = root_0;

            }

            retval.stop = input.LT(-1);


            retval.tree = (LatteTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (LatteTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving

            	  functionDefinitions.put((fname!=null?fname.getText():null), ((LatteTree)retval.tree));
            	  functionParameters.put((fname!=null?fname.getText():null), (arg!=null?arg.result:null)); //hasmap of hashmap
            	
        }
        return retval;
    }
    // $ANTLR end "function_definition"


    public static class arguments_list_return extends ParserRuleReturnScope {
        public List<Param> result;
        LatteTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "arguments_list"
    // D:\\Projects\\git\\Latte\\Latte\\src\\grammar\\Latte.g:76:1: arguments_list returns [List<Param> result] :p1= param ( ',' p2= param )* -> ^( PARAMS ( param )+ ) ;
    public final LatteParser.arguments_list_return arguments_list() throws RecognitionException {
        LatteParser.arguments_list_return retval = new LatteParser.arguments_list_return();
        retval.start = input.LT(1);


        LatteTree root_0 = null;

        Token char_literal6=null;
        LatteParser.param_return p1 =null;

        LatteParser.param_return p2 =null;


        LatteTree char_literal6_tree=null;
        RewriteRuleTokenStream stream_53=new RewriteRuleTokenStream(adaptor,"token 53");
        RewriteRuleSubtreeStream stream_param=new RewriteRuleSubtreeStream(adaptor,"rule param");
        try {
            // D:\\Projects\\git\\Latte\\Latte\\src\\grammar\\Latte.g:77:3: (p1= param ( ',' p2= param )* -> ^( PARAMS ( param )+ ) )
            // D:\\Projects\\git\\Latte\\Latte\\src\\grammar\\Latte.g:78:3: p1= param ( ',' p2= param )*
            {
            retval.result = new ArrayList<Param>();

            pushFollow(FOLLOW_param_in_arguments_list311);
            p1=param();

            state._fsp--;

            stream_param.add(p1.getTree());

            retval.result.add((p1!=null?p1.result:null));

            // D:\\Projects\\git\\Latte\\Latte\\src\\grammar\\Latte.g:79:39: ( ',' p2= param )*
            loop3:
            do {
                int alt3=2;
                int LA3_0 = input.LA(1);

                if ( (LA3_0==53) ) {
                    alt3=1;
                }


                switch (alt3) {
            	case 1 :
            	    // D:\\Projects\\git\\Latte\\Latte\\src\\grammar\\Latte.g:79:40: ',' p2= param
            	    {
            	    char_literal6=(Token)match(input,53,FOLLOW_53_in_arguments_list316);  
            	    stream_53.add(char_literal6);


            	    pushFollow(FOLLOW_param_in_arguments_list320);
            	    p2=param();

            	    state._fsp--;

            	    stream_param.add(p2.getTree());

            	    retval.result.add((p2!=null?p2.result:null));

            	    }
            	    break;

            	default :
            	    break loop3;
                }
            } while (true);


            // AST REWRITE
            // elements: param
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (LatteTree)adaptor.nil();
            // 80:3: -> ^( PARAMS ( param )+ )
            {
                // D:\\Projects\\git\\Latte\\Latte\\src\\grammar\\Latte.g:80:6: ^( PARAMS ( param )+ )
                {
                LatteTree root_1 = (LatteTree)adaptor.nil();
                root_1 = (LatteTree)adaptor.becomeRoot(
                (LatteTree)adaptor.create(PARAMS, "PARAMS")
                , root_1);

                if ( !(stream_param.hasNext()) ) {
                    throw new RewriteEarlyExitException();
                }
                while ( stream_param.hasNext() ) {
                    adaptor.addChild(root_1, stream_param.nextTree());

                }
                stream_param.reset();

                adaptor.addChild(root_0, root_1);
                }

            }


            retval.tree = root_0;

            }

            retval.stop = input.LT(-1);


            retval.tree = (LatteTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (LatteTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "arguments_list"


    public static class param_return extends ParserRuleReturnScope {
        public Param result;
        LatteTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "param"
    // D:\\Projects\\git\\Latte\\Latte\\src\\grammar\\Latte.g:83:1: param returns [Param result] : type NAME -> ^( PARAM type NAME ) ;
    public final LatteParser.param_return param() throws RecognitionException {
        LatteParser.param_return retval = new LatteParser.param_return();
        retval.start = input.LT(1);


        LatteTree root_0 = null;

        Token NAME8=null;
        LatteParser.type_return type7 =null;


        LatteTree NAME8_tree=null;
        RewriteRuleTokenStream stream_NAME=new RewriteRuleTokenStream(adaptor,"token NAME");
        RewriteRuleSubtreeStream stream_type=new RewriteRuleSubtreeStream(adaptor,"rule type");
        try {
            // D:\\Projects\\git\\Latte\\Latte\\src\\grammar\\Latte.g:84:2: ( type NAME -> ^( PARAM type NAME ) )
            // D:\\Projects\\git\\Latte\\Latte\\src\\grammar\\Latte.g:84:4: type NAME
            {
            pushFollow(FOLLOW_type_in_param351);
            type7=type();

            state._fsp--;

            stream_type.add(type7.getTree());

            NAME8=(Token)match(input,NAME,FOLLOW_NAME_in_param353);  
            stream_NAME.add(NAME8);


            retval.result = new Param((type7!=null?input.toString(type7.start,type7.stop):null), (NAME8!=null?NAME8.getText():null));

            // AST REWRITE
            // elements: type, NAME
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (LatteTree)adaptor.nil();
            // 84:61: -> ^( PARAM type NAME )
            {
                // D:\\Projects\\git\\Latte\\Latte\\src\\grammar\\Latte.g:84:64: ^( PARAM type NAME )
                {
                LatteTree root_1 = (LatteTree)adaptor.nil();
                root_1 = (LatteTree)adaptor.becomeRoot(
                (LatteTree)adaptor.create(PARAM, "PARAM")
                , root_1);

                adaptor.addChild(root_1, stream_type.nextTree());

                adaptor.addChild(root_1, 
                stream_NAME.nextNode()
                );

                adaptor.addChild(root_0, root_1);
                }

            }


            retval.tree = root_0;

            }

            retval.stop = input.LT(-1);


            retval.tree = (LatteTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (LatteTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "param"


    public static class type_return extends ParserRuleReturnScope {
        LatteTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "type"
    // D:\\Projects\\git\\Latte\\Latte\\src\\grammar\\Latte.g:87:1: type : ( single_type | array_type );
    public final LatteParser.type_return type() throws RecognitionException {
        LatteParser.type_return retval = new LatteParser.type_return();
        retval.start = input.LT(1);


        LatteTree root_0 = null;

        LatteParser.single_type_return single_type9 =null;

        LatteParser.array_type_return array_type10 =null;



        try {
            // D:\\Projects\\git\\Latte\\Latte\\src\\grammar\\Latte.g:88:2: ( single_type | array_type )
            int alt4=2;
            int LA4_0 = input.LA(1);

            if ( (LA4_0==SINGLE_TYPE) ) {
                alt4=1;
            }
            else if ( (LA4_0==64||LA4_0==68) ) {
                alt4=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 4, 0, input);

                throw nvae;

            }
            switch (alt4) {
                case 1 :
                    // D:\\Projects\\git\\Latte\\Latte\\src\\grammar\\Latte.g:88:4: single_type
                    {
                    root_0 = (LatteTree)adaptor.nil();


                    pushFollow(FOLLOW_single_type_in_type377);
                    single_type9=single_type();

                    state._fsp--;

                    adaptor.addChild(root_0, single_type9.getTree());

                    }
                    break;
                case 2 :
                    // D:\\Projects\\git\\Latte\\Latte\\src\\grammar\\Latte.g:89:4: array_type
                    {
                    root_0 = (LatteTree)adaptor.nil();


                    pushFollow(FOLLOW_array_type_in_type382);
                    array_type10=array_type();

                    state._fsp--;

                    adaptor.addChild(root_0, array_type10.getTree());

                    }
                    break;

            }
            retval.stop = input.LT(-1);


            retval.tree = (LatteTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (LatteTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "type"


    public static class single_type_return extends ParserRuleReturnScope {
        LatteTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "single_type"
    // D:\\Projects\\git\\Latte\\Latte\\src\\grammar\\Latte.g:92:1: single_type : SINGLE_TYPE ;
    public final LatteParser.single_type_return single_type() throws RecognitionException {
        LatteParser.single_type_return retval = new LatteParser.single_type_return();
        retval.start = input.LT(1);


        LatteTree root_0 = null;

        Token SINGLE_TYPE11=null;

        LatteTree SINGLE_TYPE11_tree=null;

        try {
            // D:\\Projects\\git\\Latte\\Latte\\src\\grammar\\Latte.g:93:2: ( SINGLE_TYPE )
            // D:\\Projects\\git\\Latte\\Latte\\src\\grammar\\Latte.g:93:4: SINGLE_TYPE
            {
            root_0 = (LatteTree)adaptor.nil();


            SINGLE_TYPE11=(Token)match(input,SINGLE_TYPE,FOLLOW_SINGLE_TYPE_in_single_type394); 
            SINGLE_TYPE11_tree = 
            (LatteTree)adaptor.create(SINGLE_TYPE11)
            ;
            adaptor.addChild(root_0, SINGLE_TYPE11_tree);


            }

            retval.stop = input.LT(-1);


            retval.tree = (LatteTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (LatteTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "single_type"


    public static class array_type_return extends ParserRuleReturnScope {
        LatteTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "array_type"
    // D:\\Projects\\git\\Latte\\Latte\\src\\grammar\\Latte.g:96:1: array_type : ( 'int[]' | 'boolean[]' );
    public final LatteParser.array_type_return array_type() throws RecognitionException {
        LatteParser.array_type_return retval = new LatteParser.array_type_return();
        retval.start = input.LT(1);


        LatteTree root_0 = null;

        Token set12=null;

        LatteTree set12_tree=null;

        try {
            // D:\\Projects\\git\\Latte\\Latte\\src\\grammar\\Latte.g:97:2: ( 'int[]' | 'boolean[]' )
            // D:\\Projects\\git\\Latte\\Latte\\src\\grammar\\Latte.g:
            {
            root_0 = (LatteTree)adaptor.nil();


            set12=(Token)input.LT(1);

            if ( input.LA(1)==64||input.LA(1)==68 ) {
                input.consume();
                adaptor.addChild(root_0, 
                (LatteTree)adaptor.create(set12)
                );
